# binthere

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: .gitignore  README.md  install.js  package.json
src/: cli.rs  installed.rs  main.rs  models.rs  purge.rs  report.rs  scanner.rs  state.rs
