[package]
name = "binthere"
version = "0.1.0"
edition = "2021"
authors = ["BinThere Contributors"]
description = "A safe CLI to find and optionally purge installer files"
license = "MIT"
readme = "README.md"
keywords = ["cli", "cleanup", "filesystem", "installer"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
